expense-app/main/default/objects/Ledger__c/fields/Cashflow__c.field-meta.xml
<CustomField>
    <fullName>Cashflow__c</fullName>
    <description>Cashflow is total income excluding Super minus total Expenses</description>
    <formula>Total_Income_excluding_Super__c -  Total_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cashflow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>