expense-app/main/default/objects/Ledger__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The Date of the Ledger. The important info here is the Month and the Year as this is a Monthly Ledger</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>