expense-app/main/default/objects/Ledger__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <description>Total Income for this Ledger</description>
    <label>Total Income</label>
    <summarizedField>Income__c.Amount__c</summarizedField>
    <summaryForeignKey>Income__c.Ledger__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>