expense-app/main/default/objects/Ledger__c/fields/Total_Income_Excluding_Investments__c.field-meta.xml
<CustomField>
    <fullName>Total_Income_Excluding_Investments__c</fullName>
    <description>Total Income excluding Investment type income</description>
    <label>Total Income excluding Investments</label>
    <summarizedField>Income__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Income__c.Type__c</field>
        <operation>notEqual</operation>
        <value>Investment</value>
    </summaryFilterItems>
    <summaryForeignKey>Income__c.Ledger__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>