expense-app/main/default/objects/Ledger__c/fields/Total_Income_excluding_Super__c.field-meta.xml
<CustomField>
    <fullName>Total_Income_excluding_Super__c</fullName>
    <description>Total income excluding the amount from Super that goes straight to the Super account</description>
    <label>Total Income excluding Super</label>
    <summarizedField>Income__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Income__c.Sub_Type__c</field>
        <operation>notEqual</operation>
        <value>Superannuation</value>
    </summaryFilterItems>
    <summaryForeignKey>Income__c.Ledger__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>