expense-app/main/default/objects/Ledger__c/fields/Total_Investments__c.field-meta.xml
<CustomField>
    <fullName>Total_Investments__c</fullName>
    <description>Total Expenses related to Investments</description>
    <label>Total Investments</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Expense__c.Type__c</field>
        <operation>equals</operation>
        <value>Investment</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense__c.Ledger__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>